cmt: add comments and readable syntax for documentations